# x86RetSpoof

./: CMakeLists.txt  LICENSE  README.md  x86RetSpoof.h
.github/workflows/: windows.yml
Tests/: CMakeLists.txt  CdeclTests.cpp  FastcallTests.cpp  Gadget.h  StdcallTests.cpp  ThiscallTests.cpp
